# decoder-accuracy-reproduction

./: CITATION.cff  README.md  pyproject.toml
notebooks/: 01_decoder_accuracy.ipynb
reports/: TECHNICAL_REPORT.md
src/darepro/: __init__.py  accuracy.py  codes.py  figures.py  optimal.py  repro.py
tests/: test_accuracy.py
